--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,22 @@
 {
-  "plugins": ["@babel/syntax-dynamic-import"],
+  "plugins": [
+    "@babel/syntax-dynamic-import"
+  ],
   "presets": [
     [
       "@babel/preset-env",
       {
         "modules": false
       }
+    ],
+    [
+      "@babel/preset-react",
+      {
+        "runtime": "automatic"
+      }
+    ],
+    [
+      "@babel/preset-typescript"
     ]
   ]
 }
