--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
   "devDependencies": {
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/react-dom": "^18.2.19",
     "@webpack-cli/generators": "^3.0.7",
     "babel-loader": "^9.1.3",
     "html-webpack-plugin": "^5.6.0",
     "prettier": "^3.2.5",
+    "typescript": "^5.3.3",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "wretch": "^2.8.0"
   },
   "scripts": {
     "build": "webpack --mode=production --node-env=production",
@@ -23,5 +28,9 @@
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
     "serve": "webpack serve"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
